--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
   "dependencies": {
     "@firebase/firestore": "^4.7.14",
     "firebase": "^11.7.3",
+    "firebase-admin": "^13.4.0",
     "framer-motion": "^11.0.3",
+    "i18next": "^25.1.3",
+    "i18next-browser-languagedetector": "^8.1.0",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
+    "react-i18next": "^15.5.1",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^6.23.0",
     "uuid": "^11.1.0"
